src/objects/SalesHeader__c.object
<CustomObject>
    <fields>
        <fullName>Bill_To_Company__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Bill To Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SalesHeaders</relationshipLabel>
        <relationshipName>SalesHeaders</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_To_Customer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Bill To Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SalesHeaders</relationshipLabel>
        <relationshipName>SalesHeaders</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>SalesHeader</label>
    <nameField>
        <label>SalesHeader Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SalesHeaders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>